--- a/config/database.yml
+++ b/config/database.yml
@@ -1,14 +1,14 @@
 default: &default
   adapter: postgresql
   encoding: utf8
-  username: <%= ENV["DB_USER_NAME"] %>
-  password: <%= ENV["DB_USER_PASSWD"] %>
+  username: <%= ENV['DB_USER_NAME'] %>
+  password: <%= ENV['DB_USER_PASSWD'] %>
   pool: 5
 
 development:
   <<: *default
   host: localhost
-  database: <%= ENV["DB_NAME"] %>_<%= Rails.env %>
+  database: <%= ENV['DB_NAME'] %>_<%= Rails.env %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,14 +16,9 @@ development:
 test:
   <<: *default
   host: localhost
-  database: <%= ENV["DB_NAME"] %>_<%= Rails.env %>
+  database: <%= ENV['DB_NAME'] %>_<%= Rails.env %>
 
 production:
   <<: *default
-  host: 20.194.61.63
-  database: <%= ENV["DB_NAME"] %>_<%= Rails.env %>
-  
-# production:
-#   <<: *default
-#   host: 'sharework-production.c3cotrnu4oro.ap-northeast-2.rds.amazonaws.com'
-#   database: <%= ENV["DB_NAME"] %>_<%= Rails.env %>
+  host: <%= ENV['DB_HOST'] %>
+  database: <%= ENV['DB_NAME'] %>_<%= Rails.env %>
